ERR-2469 -- CardTypeExtractor быть не должно вообще и мелкие исправления ссылок на архивы

--- a/modules/samples/pages/components/command-plugin.adoc
+++ b/modules/samples/pages/components/command-plugin.adoc
@@ -2,13 +2,12 @@
 
 В проекте создаётся расширения {wincl}а, которое добавляет на ленту инструментов новую команду, организующую перевод курсора на личную папку текущего сотрудника. Личная папка должна быть задана в _Справочнике сотрудников_.
 
-Для реализации расширения {wincl}а требуется:
-
+.Для реализации расширения {wincl}а требуется:
 . Создать проект (Microsoft Visual Studio) типа "Class Library".
 . Создайте элемент управления "User Control" (Windows Forms).
 . Измените базовый класс элемента управления с UserControl на `xref:Platform-WinForms:NavExtension_CL.adoc[NavExtension]`.
 . Переопределить необходимые методы и свойства базового класса (см. пример).
-. Создать библиотеку карточек (доступна в архиве проекта), включив в неё карточку использующую созданный компонент.
+. Создать библиотеку карточек (доступна в xref:ROOT:attachment$winclientExtension.zip[архиве] проекта), включив в неё карточку, использующую созданный компонент.
 . Зарегистрировать реализованный компонент в GAC (предпочтительно) на всех клиентских машинах.
 . Зарегистрировать с использованием программы CardManager, входящей в Resource Kit, созданную библиотеку карточек на сервере {dv}.
 
