--- a/modules/samples/pages/components/properties-page.adoc
+++ b/modules/samples/pages/components/properties-page.adoc
@@ -6,7 +6,7 @@
 
 [NOTE]
 ====
-Архив с исходным кодом _решения_ доступен по xref:ROOT:attachment$winclientExtension.zip[ссылке].
+Архив с исходным кодом решения доступен по xref:ROOT:attachment$winclientExtension.zip[ссылке].
 ====
 
 . Создаем (в Visual Studio) новый проект типа `Class Library`.
@@ -136,7 +136,7 @@ protected override IEnumerable<NavPropertyPage> CreatePropertyPages()
 ====
 +
 . Собираем проект и распространяем сборку на клиентские компьютеры. Сборка должна быть зарегистрирована как COM-компонент утилитой _regasm_.
-. Реализуем библиотеку карточек с карточкой, компонентом который является сборка (сборка может быть подписанной и размещена в GAC, либо в каталоге приложения), содержащая разработанный ранее код.
+. Реализуем библиотеку карточек с карточкой, компонентом который является сборка, содержащая разработанный ранее код (сборка может быть подписанной и размещена в GAC, либо в каталоге приложения).
 +
 .Добавление кода сборки
 image::ROOT:assembly-code.png[Добавление кода сборки]
