--- a/modules/samples/pages/solution/card-lib/card-component.adoc
+++ b/modules/samples/pages/solution/card-lib/card-component.adoc
@@ -2,7 +2,7 @@
 
 [NOTE]
 ====
-Исходный код компонента карточки расположен в подкаталоге `NetstatSolutionCard` приложенного архива.
+Исходный код компонента карточки расположен в подкаталоге `NetstatSolutionCard` приложенного xref:ROOT:attachment$netstatSolution.zip[архива].
 ====
 
 Поскольку пример разработки компонента карточки приведён в разделе xref:solutions:cards/card-component/component.adoc[Разработка компонента карточки], здесь отмечены только ключевые моменты его реализации для _Модуля учета сетевых устройств_.
