--- a/modules/samples/pages/solution/card-lib/card-metadata-scheme.adoc
+++ b/modules/samples/pages/solution/card-lib/card-metadata-scheme.adoc
@@ -2,12 +2,12 @@
 
 [NOTE]
 ====
-_Модуль учета сетевых устройств_ содержит единственную карточку (_Карточка учета сетевого оборудования_), схема и ресурсы которой расположены в подкаталоге `CardDefs`.
+_Модуль учета сетевых устройств_ содержит единственную карточку (_Карточка учета сетевого оборудования_), схема и ресурсы которой расположены в подкаталоге xref:ROOT:attachment$netstatSolution.zip[архива] `CardDefs`.
 ====
 
 Сценарий создания схемы метаданных карточки достаточно подробно рассмотрен в xref:solutions:cards/scheme/create-edit-scheme.adoc[Создание и редактирование схемы данных], поэтому здесь отмечены только ключевые моменты.
 
-_Модуль учета сетевых устройств_ использует один тип карточки для хранения информации по сетевым устройствам и для хранения журнала доступности. Если создаётся рабочее _решение_ подобного назначения, логичнее будет использовать имеющийся в {dv} _справочник серверов_, а для хранения журнала отдельные карточки (например, расширить карточку _сервера_).
+_Модуль учета сетевых устройств_ использует один тип карточки для хранения информации по сетевым устройствам и для хранения журнала доступности. Если создаётся рабочее решение подобного назначения, логичнее будет использовать имеющийся в {dv} _справочник серверов_, а для хранения журнала отдельные карточки (например, расширить карточку _сервера_).
 
 .В метаданных карточки указываем, помимо прочего:
 * _Идентификатор_ -- идентификатор карточки, который также задействован при xref:solution/card-lib/lib-component.adoc[создании] компонента библиотеки карточек.
