--- a/modules/samples/pages/solution/card-lib/lib-component.adoc
+++ b/modules/samples/pages/solution/card-lib/lib-component.adoc
@@ -2,10 +2,10 @@
 
 [NOTE]
 ====
-Исходный код компонента библиотеки карточек расположен в подкаталоге `CardLib` приложенного архива.
+Исходный код компонента библиотеки карточек расположен в подкаталоге `CardLib` приложенного xref:ROOT:attachment$netstatSolution.zip[архива].
 ====
 
-Компонент библиотеки карточек является обязательной частью _решения_, он определяет корректность установки _решения_ в целом, а его отсутствие является сигналом {wincl}у о необходимости установки клиентской части.
+Компонент библиотеки карточек является обязательной частью решения, он определяет корректность установки решения в целом, а его отсутствие является сигналом {wincl}у о необходимости установки клиентской части.
 
 При большом размере и количестве схем карточек, зарегистрированных в библиотеке, а также большом числе клиентов {dv}, компонент библиотеки карточек выполняет роль статического кэша на стороне клиента со схемами и ресурсами карточек, что предполагает выигрыш в части снижения нагрузки на сервер {dv}.
 
