--- a/modules/samples/pages/solution/card-lib/lib-metadata-scheme.adoc
+++ b/modules/samples/pages/solution/card-lib/lib-metadata-scheme.adoc
@@ -2,7 +2,7 @@
 
 [NOTE]
 ====
-Готовая схема библиотеки карточек (файл `NetstatSolutionCardLib.xml`), а также используемые ресурсы расположены в подкаталоге `CardDefs`.
+Готовая схема библиотеки карточек (файл `NetstatSolutionCardLib.xml`), а также используемые ресурсы расположены в подкаталоге xref:ROOT:attachment$netstatSolution.zip[архива] `CardDefs`.
 ====
 
 Подробный сценарий создания схемы библиотеки карточек приведён в разделе xref:solutions:cards/prepare-card-lib.adoc[Подготовка библиотеки карточек]. Здесь отмечены только основные моменты.
