--- a/modules/samples/pages/solution/card-sql-package.adoc
+++ b/modules/samples/pages/solution/card-sql-package.adoc
@@ -6,7 +6,7 @@
 
 [NOTE]
 ====
-Файлы пакета `CardPackage` расположены в подкаталоге `CardPackage` приложенного архива.
+Файлы пакета `CardPackage` расположены в подкаталоге `CardPackage` приложенного xref:ROOT:attachment$netstatSolution.zip[архива].
 ====
 
 [IMPORTANT]
@@ -40,11 +40,11 @@
 
 Дополнительно был сформирован пустой (реализация бизнес-процесса выходит за рамки примера) бизнес-процесс "Проверка доступности сетевых узлов", а также экземпляр карточки _учета сетевого оборудования_.
 
-Все эти данные предполагается автоматически загружать в {dv} при установке _решения_.
+Все эти данные предполагается автоматически загружать в {dv} при установке решения.
 
 == Выгрузка данных
 
-Сформированные данные необходимо выгрузить из {dv} в формате XML, т.к. при установке _решения_ они просто импортируются средствами платформы.
+Сформированные данные необходимо выгрузить из {dv} в формате XML, т.к. при установке решения они просто импортируются средствами платформы.
 
 Карточки (включая бизнес-процессы) экспортируются стандартными средствами {dv} {wincl}.
 
@@ -80,10 +80,10 @@ Replace="1" если карточка должна заменить сущест
 
 [NOTE]
 ====
-Готовый файл (`NetstatSolutionInstall.xml`) пакета "SqlPackage" содержится в каталоге `Database` приложенного архива.
+Готовый файл (`NetstatSolutionInstall.xml`) пакета "SqlPackage" содержится в каталоге `Database` приложенного xref:ROOT:attachment$netstatSolution.zip[архива].
 ====
 
-Помимо `CardPackage`, для пакета установки _решения_ требуется создать пакет `SqlPackage`, состоящий из единственного файла, в котором указано расположение файлов со схемами метаданных библиотек карточек. Файл должен быть загружен в базу данных при установке _решения_.
+Помимо `CardPackage`, для пакета установки решения требуется создать пакет `SqlPackage`, состоящий из единственного файла, в котором указано расположение файлов со схемами метаданных библиотек карточек. Файл должен быть загружен в базу данных при установке решения.
 
 ."CardPackage" должен соответствовать формату:
 [source,xml]
