--- a/modules/samples/pages/solution/create-solution.adoc
+++ b/modules/samples/pages/solution/create-solution.adoc
@@ -1,8 +1,8 @@
 = Пример разработки решения
 
-В данном практическом примере содержится типовой сценарий разработки _решения_.
+В данном практическом примере содержится типовой сценарий разработки решения.
 
-Архив с исходным кодом _решения_ доступен по xref:ROOT:attachment$netstatSolution.zip[ссылке].
+Архив с исходным кодом решения доступен по xref:ROOT:attachment$netstatSolution.zip[ссылке].
 
 .Для работы с проектом "Решения" необходимы:
 . Visual Studio 2013 или выше. *Для сборки проекта библиотеки карточек требуется Visual Studio 2013*.
@@ -11,7 +11,7 @@
 
 == Основные сведения
 
-Пример, приведенный в данном разделе, содержит полный сценарий создания собственного _решения_ (на платформе {dv}) для учета сетевого оборудования организации и сбора статистики его отказов, а также исходные коды всего проекта.
+Пример, приведенный в данном разделе, содержит полный сценарий создания собственного решения (на платформе {dv}) для учета сетевого оборудования организации и сбора статистики его отказов, а также исходные коды всего проекта.
 
 В процессе его создания будут рассмотрены вопросы, связанные с разработкой библиотеки карточек, пакетов установки, а также необходимых модулей {dv}. Вопросы, связанные с локализацией решений, а также созданием пакетов установки для различных платформ, здесь не рассматриваются.
 
@@ -30,7 +30,7 @@
 * Выгруженные настройки _справочника видов карточек_, _конструктора разметок_, _конструктора состояний_ и другие.
 * В качестве примера, экземпляр карточки _учета сетевого оборудования_, который предполагается загружаться в {dv} при установке решения. В собственном решении подобным образом может быть загружен шаблон карточки.
 
-Данное руководство сопровождается исходными кодами всего _решения_, в том числе пакетов установки, а также схемами библиотеки карточек и карточки.
+Данное руководство сопровождается исходными кодами всего решения, в том числе пакетов установки, а также схемами библиотеки карточек и карточки.
 
 .Архив решения имеет следующую структуру:
 * `bin` -- каталог с основными сборками {dv}, использованными в проекте компонента карточки.
@@ -48,8 +48,8 @@
 * `Installers` -- каталог сборки пакетов установки.
 * `NetstatSolution.Snapin` -- каталог с проектом модуля расширения _Консоли настройки_ Docsvision.
 * `NetstatSolutionCard` -- каталог с проектом компонента карточки, а также его объектной моделью.
-* `NetstatSolutionClientInstaller` -- каталог с проектом пакета установки клиентской части _решения_.
-* `NetstatSolutionInstaller` -- каталог с проектом пакета установки серверной части _решения_.
+* `NetstatSolutionClientInstaller` -- каталог с проектом пакета установки клиентской части решения.
+* `NetstatSolutionInstaller` -- каталог с проектом пакета установки серверной части решения.
 // * `Other` -- в данном каталоге содержится утилита _CardTypeExtractor_, которая будет использована на этапе xref:solution/card-sql-package.adoc[Формирование "CardPackage" и "SqlPackage"].
 
 [NOTE]
