--- a/modules/samples/pages/solution/snap-in/control.adoc
+++ b/modules/samples/pages/solution/snap-in/control.adoc
@@ -1,6 +1,6 @@
 = Пользовательский интерфейс расширения
 
-Если для _решения_ необходима административная настройка, к примеру: выбор почтового сервера, то для расширения *Консоли настройки Docsvision* может быть реализован пользовательский интерфейс.
+Если для решения необходима административная настройка, к примеру: выбор почтового сервера, то для расширения *Консоли настройки Docsvision* может быть реализован пользовательский интерфейс.
 
 Для _Модуля учета сетевых устройств_ предусмотрен ввод некоторых данных: e-mail администратора, лицензионный ключ, признак глобального отключения проверки.
 
