--- a/modules/samples/pages/solution/snap-in/standard-interfaces.adoc
+++ b/modules/samples/pages/solution/snap-in/standard-interfaces.adoc
@@ -5,7 +5,7 @@
 == Реализация интерфейса ISnapIn
 
 .Основной интерфейс расширения, который добавляет:
-* `LibraryID` -- _идентификатор библиотеки карточек_, с которой данное расширение ассоциировано. `LibraryID` требуется для регистрации пакетов установки, добавления библиотеки карточек в базу данных, удаления _решения_, а также для некоторых других сценариев работы _Консоли настройки_.
+* `LibraryID` -- _идентификатор библиотеки карточек_, с которой данное расширение ассоциировано. `LibraryID` требуется для регистрации пакетов установки, добавления библиотеки карточек в базу данных, удаления решения, а также для некоторых других сценариев работы _Консоли настройки_.
 +
 [source,csharp]
 ----
@@ -61,7 +61,7 @@ public object QueryInterface(SnapInInterfacesEnum itf)
 
 == Реализация интерфейса "IConfigurator"
 
-Данный интерфейс должен быть реализован, если расширение может выполнять первоначальную настройку _решения_.
+Данный интерфейс должен быть реализован, если расширение может выполнять первоначальную настройку решения.
 
 Как правило, метод `Execute`, при установке расширения вызываемый последним, регистрирует пакеты установки клиентской части, для чего указываются: путь к пакету установки, _Идентификатор пакета установки_ и _Код продукта_, которые были указаны при xref:solution/card-lib/lib-metadata-scheme.adoc[разработке библиотеки карточек]:
 
@@ -123,7 +123,7 @@ public string GetScript(ScriptTypeEnum type)
 }
 ----
 
-Также добавляется переменная `ContainsCardLib`, которая определяет наличие у _решения_ собственной библиотеки карточек.
+Также добавляется переменная `ContainsCardLib`, которая определяет наличие у решения собственной библиотеки карточек.
 
 [source,csharp]
 ----
@@ -137,7 +137,7 @@ public bool ContainsCardLib
 
 Данный интерфейс добавляет единственный метод `Uninstall(Boolean)`, вызываемый при удалении расширения (и решения в целом).
 
-Метод `Uninstall` может, к примеру, удалять библиотеку карточек, а также настройки _решения_, как в данном случае:
+Метод `Uninstall` может, к примеру, удалять библиотеку карточек, а также настройки решения, как в данном случае:
 
 [source,csharp]
 ----
