--- a/modules/samples/pages/solution/update.adoc
+++ b/modules/samples/pages/solution/update.adoc
@@ -1,6 +1,6 @@
 = Обновление решения
 
-.Обновление _решения_, созданного на платформе {dv} включает два этапа:
+.Обновление решения, созданного на платформе {dv} включает два этапа:
 . Обновление серверной части.
 . Обновление клиентской части.
 
