--- a/modules/samples/pages/solution/installer/client.adoc
+++ b/modules/samples/pages/solution/installer/client.adoc
@@ -2,13 +2,13 @@
 
 [NOTE]
 ====
-Исходный код _SnapIn_ расположен в подкаталоге `NetstatSolutionClientInstaller` архива проекта.
+Исходный код _SnapIn_ расположен в подкаталоге `NetstatSolutionClientInstaller` xref:ROOT:attachment$netstatSolution.zip[архива] проекта.
 ====
 
-Пакет установки клиентской части _решения_ устанавливается на рабочем месте сотрудника, и отвечает за установку и регистрацию компонентов карточек и библиотеки карточек. Клиентская часть устанавливается автоматически при открытии _{wincl}а_, если компонент библиотеки карточек не зарегистрирован.
+Пакет установки клиентской части решения устанавливается на рабочем месте сотрудника, и отвечает за установку и регистрацию компонентов карточек и библиотеки карточек. Клиентская часть устанавливается автоматически при открытии _{wincl}а_, если компонент библиотеки карточек не зарегистрирован.
 
 .Типовой сценарий установки клиентской части:
-. Создать подкаталог _решения_ в каталоге {wincl}а.
+. Создать подкаталог решения в каталоге {wincl}а.
 +
 [IMPORTANT]
 ====
@@ -20,7 +20,7 @@
 +
 * Компонент карточки не регистрируется.
 * Компонент библиотеки карточек регистрируется командой: `regsvr32.exe Путь-к-файлу-компонента` (файл должен быть доступен всем пользователям) -- данная команда пишет в общую ветку реестра, для чего требуются права администратора. Можно зарегистрировать компонент для текущего пользователя, но для этого потребуется самостоятельно реализовать скрипт для регистрации COM-компонента в ветке реестра `HKEY_CURRENT_USER`.
-. Создать в ветке реестра `HKEY_CURRENT_USER\SOFTWARE\DocsVision\Platform\5.5\Client\Applications` строковый параметр с названием _решения_. В значении должно быть указано название созданного подкаталога:
+. Создать в ветке реестра `HKEY_CURRENT_USER\SOFTWARE\DocsVision\Platform\5.5\Client\Applications` строковый параметр с названием решения. В значении должно быть указано название созданного подкаталога:
 +
 [source,xml]
 ----
