--- a/modules/samples/pages/solution/installer/new-installer.adoc
+++ b/modules/samples/pages/solution/installer/new-installer.adoc
@@ -1,3 +1,3 @@
 = Создание пакета установки
 
-В данном разделе приведена краткая последовательность создания пакетов установки клиентской и серверной части _решения_ с использованием http://wixtoolset.org/[WiX Toolset]. Пакеты установки могут быть получены с использованием других средств при условии, что будет получен пакет https://ru.wikipedia.org/wiki/Windows_Installer[Windows Installer].
+В данном разделе приведена краткая последовательность создания пакетов установки клиентской и серверной части решения с использованием http://wixtoolset.org/[WiX Toolset]. Пакеты установки могут быть получены с использованием других средств при условии, что будет получен пакет https://ru.wikipedia.org/wiki/Windows_Installer[Windows Installer].
