--- a/modules/samples/pages/solution/installer/server.adoc
+++ b/modules/samples/pages/solution/installer/server.adoc
@@ -2,16 +2,16 @@
 
 [NOTE]
 ====
-Исходный код _SnapIn_ расположен в подкаталоге `NetstatSolutionInstaller` архива проекта.
+Исходный код _SnapIn_ расположен в подкаталоге `NetstatSolutionInstaller` xref:ROOT:attachment$netstatSolution.zip[архива] проекта.
 ====
 
 Пакет установки серверной части включает в себя все разработанные ранее компоненты, в том числе пакет установки клиентской части. Данный установщик отвечает за весь цикл регистрации и удаления решения.
 
 .Далее перечислены основные шаги, которые должен выполнить пакет установки серверной части решения:
-. Создать подкаталог _решения_ в папке {dv} (по умолчанию `C:\Program Files (x86)\Docsvision`).
-. Выгрузить в созданный подкаталог компонент _SnapIn_ и пакет установки клиентской части _решения_.
-. Создать в каталоге _решения_ подкаталог `CardPackage` и выгрузить в него `xref:solution/card-sql-package.adoc[CardPackage]`, а также связанные с ним XML-файлы.
-. Создать в каталоге _решения_ подкаталог `Database` и выгрузить в него `xref:solution/card-sql-package.adoc[SqlPackage]`, а также схемы карточек и библиотека карточек, а также их ресурсы.
+. Создать подкаталог решения в папке {dv} (по умолчанию `C:\Program Files (x86)\Docsvision`).
+. Выгрузить в созданный подкаталог компонент _SnapIn_ и пакет установки клиентской части решения.
+. Создать в каталоге решения подкаталог `CardPackage` и выгрузить в него `xref:solution/card-sql-package.adoc[CardPackage]`, а также связанные с ним XML-файлы.
+. Создать в каталоге решения подкаталог `Database` и выгрузить в него `xref:solution/card-sql-package.adoc[SqlPackage]`, а также схемы карточек и библиотека карточек, а также их ресурсы.
 . В ветке реестра `{hklm}\SOFTWARE\DocsVision\Platform\5.5\Console\SnapIns` создать раздел с названием решения.
 . В созданный раздел добавить два строковых параметра:
 * `Path` -- путь к сборке _SnapIn_.
